# LR6

./: CMakeLists.txt  GTESTS.cpp  Tasks_adress_san.cpp  Tasks_funcs.cpp  Tasks_funcs.h
